# true_ledger_webm_version

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
agent/: .env.example  Dockerfile  README.md  pyproject.toml
agent/scripts/: activate.cmd  activate.ps1  activate.sh  setup.cmd  setup.ps1  setup.sh
agent/src/deepfake_grid_analyzer/: __init__.py  analyzer.py  cli.py  config.py  contracts.py  gemini_client.py  gemini_prompt.py  grids.py  parser.py  server.py  storage.py
agent/tests/: test_analyzer.py  test_cli.py  test_contracts.py  test_gemini_client.py  test_grids.py  test_parser.py  test_server.py
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  config.py  database.py  redis_client.py
backend/app/models/: models.py
backend/app/services/: agent_client.py  cache_service.py  chunk_queue_service.py  chunk_storage_service.py  database_service.py  embedding_service.py  frame_pipeline.py  vector_search_service.py
extension/: README.md  content.js  manifest.config.ts  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/public/icons/: process_icon.py
extension/src/: .env  vite-env.d.ts
extension/src/background/: service-worker.ts
extension/src/content/: chunkedCapture.ts  main.ts
extension/src/popup/: App.tsx  index.html  main.tsx  popup.css
orchestrator/: .env.example  Dockerfile  requirements.txt
orchestrator/app/: main.py
scripts/: setup.cmd  setup.ps1  setup.sh
(+15 files in other folders)
